# chromium-compact-language-detector

./: .hgignore  AUTHORS  ChangeLog  INSTALL.txt  MAINTAINER  MANIFEST.in  Makefile.am  NEWS  ProjectHome.md  README  README.txt  TODO  autogen.sh  build.sh  build.win32.cmd  cld.pc.in  cleanrepo.sh  configure  configure.ac  encodings.cc  evalEuroparl.py  example.cc  gen_enc.py  gen_test.py  pycldmodule.cc  setup.py  setup_full.py  test.py  testData.py  test_shuffle.py
base/: build_config.h
bindings/dotnet/: ccld.cpp  ccld.h  encodings.h  languages.h  test.cs
bindings/python/: AUTHORS  COPYING  INSTALL  MANIFEST.in  Makefile.am  README  configure.ac  setup.py
bindings/python/src/: pycldmodule.cc
bindings/python/tests/: cld_test.py  test.py
debian/: copyright  files
encodings/compact_lang_det/: compact_lang_det_impl.cc
release/debian/: README.Debian  README.source  changelog  compact-language-detector-dev.install  compact-language-detector.doc-base.EX  compact-language-detector.install  control  rules
src/: Makefile.am
